
[package]
name = "examples"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
identity-core = { path = "../identity-core" }
identity-iota = { path = "../identity-iota" }
iota-core = { git = "https://github.com/iotaledger/iota.rs", rev = "86f5bb24727266e13abd772616d0700abe866892" }
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "credential"
path = "credential.rs"

[[example]]
name = "diff_chain"
path = "diff_chain.rs"

[[example]]
name = "resolution"
path = "resolution.rs"
