[package]
name = "identity-account"
version = "0.2.0"
authors = ["IOTA Identity"]
edition = "2018"
description = "Secure storage for Decentralized Identifiers and Verifiable Credentials."
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "identity"]
homepage = "https://www.iota.org"

[dependencies]
async-trait = { version = "0.1", default-features = false }
futures = { version = "0.3" }
hashbrown = { version = "0.9" }
identity-core = { version = "=0.2.0", path = "../identity-core" }
identity-iota = { version = "=0.2.0", path = "../identity-iota" }
once_cell = { version = "1.5", default-features = false, features = ["std"] }
riker = { version = "0.4" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
slog = { version = "2.7" }
tokio = { version = "1.2", default-features = false, features = ["sync"] }

[dependencies.iota-crypto]
git = "https://github.com/iotaledger/crypto.rs"
rev = "dbb082870676b25b1867513792e51bd74ef1824d"
features = ["random", "blake2b", "sha", "pbkdf", "hmac", "chacha"]

[dependencies.iota-stronghold]
path = "../../stronghold.rs/client"
# git = "https://github.com/iotaledger/stronghold.rs"
# rev = "175d33562081dc26bd0b4b5cce624759606161d7"

[dev-dependencies]
tokio = { version = "1.2", features = ["full"] }
